@@ -43,7 +43,7 @@ build.
 
 *Only* if you are interested in building lxml from a Subversion
 checkout (e.g. to test a bug fix that has not been release yet) or if
-want to be an lxml developer, then you do need a working Cython
+you want to be an lxml developer, then you do need a working Cython
 installation.  You can use EasyInstall_ to install it::
 
     easy_install Cython==0.11
